--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>Run Buddy</title>
+<link rel="stylesheet" href="./assets/css/style.css" />
+<title>RUN BUDDY</title>
+
 </head>
 <body>
     <!-- navigation -->
