--- a/index.html
+++ b/index.html
@@ -20,9 +20,46 @@
                     <!-- Anchor element -->
                     <a href="what-we-do">What We Do</a>
                 </li>
+                <!-- "what we do" section -->
+                <section id="what-we-do" class="intro">
+                    <h2>What We Do</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam dignissimos exercitationem ratione illum vel. Sunt assumenda a exercitationem fuga ab quasi, recusandae officiis ea dignissimos reprehenderit! Nam ea maiores ipsa?
+                    </p>
+                </section>
                 <li>
                     <a href="what-you-do">What You Do</a>
                 </li>
+                <!-- "what you do" section -->
+                <section id="what-you-do">
+                    <h2>What You Do</h2>
+
+                    <div>
+                        <!-- Insert this img element -->
+                        <img src="./assets/images/step-1.svg" alt="" />
+                        <h3>Step 1: Fill Out the Form Above.</h3>
+                    <p>You're already here, so why not?</p>
+                    </div>
+
+                    <div>
+                        <img src="./assets/images/step-2.svg" alt="" />
+                        <h3>Step 2: Consut with One of Our Trainers.</h3>
+                        <p>Are you here to build muscle, lose weight, or just feel good?</p>
+                    </div>
+
+                    <div>
+                        <img src="./assets/images/step-3.svg" alt="" />
+                        <h3>Step 3: Get Running.</h3>
+                        <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+                      </div>
+
+                    <div>
+                        <img src="./assets/images/step-4.svg" alt="" />
+                        <h3>Step 4: See Results.</h3>
+                        <p>Bi-weekly checkins with your trainer will keep you focused</p>
+                    </div>
+
+                </section>
                 <li>
                     <a href="your-trainers">Your Trainers</a>
                 </li>
@@ -32,6 +69,42 @@
             </ul>
         </nav>
     </header>
+
+    <section class="hero">
+        <div class="hero-form">
+            <h3>Get Started Today</h3>
+            <p>Fill out this form and one of our trainers will schedule a consult</p>
+            <!-- Add form element -->
+        <form>
+            <label for="name">Enter full name:</label>
+            <input type="text" placeholder="Your Name" name="name" id="name" class="form-input">
+
+            <label for="email">Enter email address:</label>
+            <input type="email" placeholder="Email address" name="email" id="email"class="form-input">
+
+            <label for="name">Enter a telephone number:</label>
+            <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input">
+
+            <p>
+                Have you worked out with a trainer before?
+            <input type="radio" name="trainer-confirm" id="trainer-yes" />
+            <label for="trainer-yes">Yes</label>
+            <input type="radio" name="trainer-confirm" id="trainer-no" />
+            <label for="trainer-no">No</label>
+        </p>
+        <p>
+            <label for="checkbox" >
+            I acknowledge that I am at least 18 years of age.
+        </label>
+        <input type="checkbox" name="age-confirm" id="checkbox" /> 
+        </p>
+        <button type="submit">
+        Get running!
+        </button>
+        </form>
+        </div>
+    </section>
+    <!-- end hero -->
 
     <!-- hero/jumbotron-->
     <section>
@@ -60,6 +133,10 @@
     <!-- "footer" section-->
     <footer>
         <h2> Made with ❤️ by Run Buddy 🏃</h2>
+        <div>
+            <a href="#">Read Our Privacy Policy</a><br />
+            &copy; 2022 Run Buddy, Inc.
+        </div>
     </footer>
     
 </body>
