--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </li>
                 <!-- "what we do" section -->
                 <section id="what-we-do" class="intro">
-                    <h2>What We Do</h2>
+                    <h2 class="section-title primary-border">What We Do</h2>
                     <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam dignissimos exercitationem ratione illum vel. Sunt assumenda a exercitationem fuga ab quasi, recusandae officiis ea dignissimos reprehenderit! Nam ea maiores ipsa?
                     </p>
@@ -31,13 +31,13 @@
                     <a href="what-you-do">What You Do</a>
                 </li>
                 <!-- "what you do" section -->
-                <section id="what-you-do">
-                    <h2>What You Do</h2>
+                <section id="what-you-do" class="steps">
+                    <h2 class="section-title secondary-border">What You Do</h2>
 
                     <div>
                         <!-- Insert this img element -->
                         <img src="./assets/images/step-1.svg" alt="" />
-                        <h3>Step 1: Fill Out the Form Above.</h3>
+                        <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
                     <p>You're already here, so why not?</p>
                     </div>
 
