--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </section>
 
     <!-- "What You Do" section-->
-    <section id="what-you-do">
+    <section id="what-you-do" class="steps">
         <h2>What You Do</h2>
 
         <div>
