style what you do section

--- a/index.html
+++ b/index.html
@@ -77,18 +77,18 @@
 
     <!-- "What We Do" section-->
     <section id="what-we-do" class="intro">
-        <h2>What We Do</h2>
+        <h2 class="section-title primary-border">What We Do</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, aliquam voluptas impedit amet dolorem eaque fugit eum dolorum accusantium atque exercitationem dicta delectus ut quis maiores hic similique doloremque saepe.</p>
     </section>
 
     <!-- "What You Do" section-->
     <section id="what-you-do" class="steps">
-        <h2>What You Do</h2>
+        <h2 class="section-title secondary-border">What You Do</h2>
 
         <div>
             <!-- insert this img element -->
             <img src="./assets/images/step-1.svg" alt="" />
-            <h3>Step 1: Fill Out the Form Above.</h3>
+            <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
             <p>You're already here, so why not?</p>
           </div>
         
