--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
             <h3>Step 4: See Results.</h3>
             <p>Bi-weekly checkins with your trainer will keep you focused</p>
           </div>
+
     </section>
 
       <!-- "meet the trainers" section-->
@@ -161,6 +162,31 @@
     <!-- "reach out" section-->
     <section>
         <h2>Reach Out</h2>
+        <div class="contact-info">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2906.4533804121543!2d-79.91229788476092!3d43.241918986946125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882c9b305840ef21%3A0xbecfa2cfcdab98d0!2s94%20W%2032nd%20St%2C%20Hamilton%2C%20ON%20L9C%205G9!5e0!3m2!1sen!2sca!4v1651849492960!5m2!1sen!2sca" 
+            width="600" 
+            height="450" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy"
+        </iframe>
+        </div>
+
+        <div>
+            <h3>Run Buddy</h3>
+            <p>
+                Any questions or concerns before signing up?
+                <br />
+                Let us know and we'll be happy to talk to you!
+            </p>
+            <address>
+                94 West 32nd Street <br/>
+                Hamilton, ON <br/>
+                L9C 5G9<br />
+                P: 905.334.4873<br/>
+                E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+              </address>
+        </div>
     </section>
 
     <!-- "footer" section-->
