--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             height="450" 
             style="border:0;" 
             allowfullscreen="" 
-            loading="lazy"
+            loading="lazy">
         </iframe>
         </div>
 
