--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8" />
 <link rel="stylesheet" href="./assets/css/style.css" />
 <title>RUN BUDDY</title>
-
 </head>
+  
 <body>
     <!-- navigation -->
     <header>
@@ -18,19 +18,19 @@
                 <!-- List item element -->
                 <li>
                     <!-- Anchor element -->
-                    <a href="what-we-do">What We Do</a>
+                    <a href="#what-we-do">What We Do</a>
                 </li>
                
                 <li>
-                    <a href="what-you-do">What You Do</a>
+                    <a href="#what-you-do">What You Do</a>
                 </li>
 
                 <li>
-                    <a href="your-trainers">Your Trainers</a>
+                    <a href="#your-trainers">Your Trainers</a>
                 </li>
 
                 <li>
-                    <a href="reach-out">Reach Out</a>
+                    <a href="#reach-out">Reach Out</a>
                 </li>
             </ul>
         </nav>
@@ -170,7 +170,6 @@
             allowfullscreen="" 
             loading="lazy">
         </iframe>
-        </div>
 
         <div>
             <h3>Run Buddy</h3>
@@ -186,6 +185,7 @@
                 P: 905.334.4873<br/>
                 E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
               </address>
+        </div>
         </div>
     </section>
 
