--- a/index.html
+++ b/index.html
@@ -206,6 +206,18 @@
     <section id="reach-out" class="contact">
       <h2 class="section-title secondary-border">Reach Out</h2>
       <div class="contact-info">
+        <div class="contact-form">
+          <h3>Contact Us</h3>
+          <form>
+             <label for="contact-name">Your Name</label>
+             <input type="text" id="contact-name" placeholder="Your Name" />
+        
+             <label for="contact-message">Message</label>
+             <textarea id="contact-message" placeholder="Message"></textarea>
+        
+             <button type="submit">Submit</button>
+            </form>
+        </div>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2906.4533804121543!2d-79.91229788476092!3d43.241918986946125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882c9b305840ef21%3A0xbecfa2cfcdab98d0!2s94%20W%2032nd%20St%2C%20Hamilton%2C%20ON%20L9C%205G9!5e0!3m2!1sen!2sca!4v1651849492960!5m2!1sen!2sca"
           width="600"
