--- a/index.html
+++ b/index.html
@@ -100,51 +100,95 @@
     <!-- hero/jumbotron-->
     <section></section>
 
+    <!-- Wrap every h2 with a class of "section-title" in this div! -->
+
     <!-- "What We Do" section-->
+    <div class="flex-row">
+      <h2 class="section-title primary-border">
+        What We Do
+      </h2>
+    </div>
     <section id="what-we-do" class="intro">
       <h2 class="section-title primary-border">What We Do</h2>
+      <div class="flex-row">
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, aliquam
         voluptas impedit amet dolorem eaque fugit eum dolorum accusantium atque
         exercitationem dicta delectus ut quis maiores hic similique doloremque
         saepe.
       </p>
+    </div>
     </section>
 
     <!-- "What You Do" section-->
+    <div class="flex-row">
+      <h2 class="section-title primary-border">
+        What You Do
+      </h2>
+    </div>
     <section id="what-you-do" class="steps">
       <h2 class="section-title secondary-border">What You Do</h2>
 
-      <div>
-        <!-- insert this img element -->
+      <div class="step">
+        <h3>Step 1.</h3>
+        <div class="step-info">
+          <div class="step-img">
         <img src="./assets/images/step-1.svg" alt="" />
-        <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
+        </div>
+        <div class="step-text">
+        <h4>Fill Out the Form Above.</h4>
         <p>You're already here, so why not?</p>
       </div>
+    </div>
+    </div>
 
-      <div>
+    <div class="step">
+      <h3>Step 2.</h3>
+      <div class="step-info">
+        <div class="step-img">
         <img src="./assets/images/step-2.svg" alt="" />
-        <h3>Step 2: Consult with One of Our Trainers.</h3>
+        </div>
+        <div class="step-text">
+        <h4>Consult with One of Our Trainers.</h4>
         <p>Are you here to build muscle, lose weight, or just feel good?</p>
+        </div>
       </div>
+    </div>
 
-      <div>
+      <div class="step">
+        <h3>Step 3.</h3>
+        <div class="step-info">
         <img src="./assets/images/step-3.svg" alt="" />
-        <h3>Step 3: Get Running.</h3>
+        </div>
+        <div class="step-text">
+         <h4>Get Running.</h4>
         <p>
           Hit the ground running (literally) once your trainer lays out your
           plan.
         </p>
+        </div>
+        </div>
       </div>
 
-      <div>
+      <div class="step">
+        <h3>Step 4.</h3>
+        <div class="step-info"
         <img src="./assets/images/step-4.svg" alt="" />
-        <h3>Step 4: See Results.</h3>
+        </div>
+        <div class="step-text">
+         <h4>See Results.</h4>
         <p>Bi-weekly checkins with your trainer will keep you focused</p>
+        </div>
+        </div>
       </div>
     </section>
 
     <!-- "meet the trainers" section-->
+    <div class="flex-row">
+      <h2 class="section-title primary-border">
+        Meet the Trainers
+      </h2>
+    </div>
     <section id="your-trainers" class="trainers">
       <h2 class="section-title primary-border">Meet The Trainers</h2>
 
@@ -203,6 +247,13 @@
     </section>
 
     <!-- "reach out" section-->
+    <div class="flex-row">
+      <h2 class="section-title primary-border">
+        Reach Out<div class="flex-row">
+          </h2>
+        </div>
+      </h2>
+    </div>
     <section id="reach-out" class="contact">
       <h2 class="section-title secondary-border">Reach Out</h2>
       <div class="contact-info">
