--- a/index.html
+++ b/index.html
@@ -189,17 +189,16 @@
         Meet the Trainers
       </h2>
     </div>
-    <section id="your-trainers" class="trainers">
+    <section id="your-trainers">
       <h2 class="section-title primary-border">Meet The Trainers</h2>
 
       <article class="trainer">
         <img
           src="./assets/images/trainer-1.jpg"
-          alt="Arron Stephens in his workout clothes, ready to pump iron"
-        />
-        <div class="trainer-bio text-left">
-          <h3>Arron Stephens</h3>
-          <h4>Speed / Strength</h4>
+          alt="Arron Stephens in his workout clothes, ready to pump iron"/>
+        <div class="trainer-bio">
+          <h3 class="trainer-name">Arron Stephens</h3>
+          <h4 class="trainer-role">Speed / Strength</h4>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
             neque animi quo cupiditate commodi saepe culpa sed itaque velit
@@ -211,9 +210,13 @@
 
       <!-- second trainer bio -->
       <article class="trainer">
-        <div class="trainer-bio text-right">
-          <h3>Joanna Gill</h3>
-          <h4>Endurance</h4>
+        <img
+          src="./assets/images/trainer-2.jpg"
+          alt="Joanna Gill cooling off after a workout"
+          />
+        <div class="trainer-bio">
+          <h3 class="trainer-name">Joanna Gill</h3>
+          <h4 class="trainer-role">Endurance</h4>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
             neque animi quo cupiditate commodi saepe culpa sed itaque velit
@@ -221,10 +224,6 @@
             suscipit amet quis repellat!
           </p>
         </div>
-        <img
-          src="./assets/images/trainer-2.jpg"
-          alt="Joanna Gill cooling off after a workout"
-        />
       </article>
 
       <!-- third trainer bio -->
@@ -233,9 +232,9 @@
           src="./assets/images/trainer-3.jpg"
           alt="Harry Smith wearing a headband and lifting comically small pink weights"
         />
-        <div class="trainer-bio text-left">
-          <h3>Harry "the Headband" Smith</h3>
-          <h4>Strength</h4>
+        <div class="trainer-bio">
+          <h3 class="trainer-name">Harry "the Headband" Smith</h3>
+          <h4 class="trainer-bio">Strength</h4>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
             neque animi quo cupiditate commodi saepe culpa sed itaque velit
@@ -244,6 +243,12 @@
           </p>
         </div>
       </article>
+      <div class="trainers">
+        <!-- This is for show; keep the article tags you have -->
+        <article>Trainer 1 Info</article>
+        <article>Trainer 2 Info</article>
+        <article>Trainer 3 Info</article>  
+      </div>
     </section>
 
     <!-- "reach out" section-->
