All changes in Module 2.2. 1-12

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
     </header>
 
     <section class="hero">
+      <div class="hero-cta">
+        <h2>Start Building Habits.</h2>
+        <p>
+          seitan heirloom post-ironic pop-up iPhone mlkshk hella selfies fashion axe occupy readymade put a bird on it messenger bag Wes Anderson Schlitz plaid Bushwick church-key lo-fi skateboard slow-carb hashtag trust fund Williamsburg biodiesel fixie farm-to-table 8-bit banjo XOXO Banksy chillwave bicycle rights retro cliche tattooed bespoke irony mumblecore Shoreditch deep v polaroid McSweeney's bitters cray gentrify tofu Marfa you probably haven't heard of them yr banh mi asymmetrical art party selvage letterpress High Life.
+        </p>
+      </div>
       <div class="hero-form">
         <h3>Get Started Today</h3>
         <p>
@@ -87,13 +93,7 @@
           <button type="submit">Get running!</button>
         </form>
       </div>
-      <div class="hero-cta">
-        <h2>Start Building Habits.</h2>
-        <p>
-          seitan heirloom post-ironic pop-up iPhone mlkshk hella selfies fashion axe occupy readymade put a bird on it messenger bag Wes Anderson Schlitz plaid Bushwick church-key lo-fi skateboard slow-carb hashtag trust fund Williamsburg biodiesel fixie farm-to-table 8-bit banjo XOXO Banksy chillwave bicycle rights retro cliche tattooed bespoke irony mumblecore Shoreditch deep v polaroid McSweeney's bitters cray gentrify tofu Marfa you probably haven't heard of them yr banh mi asymmetrical art party selvage letterpress High Life.
-  </p>
-        </p>
-      </div>
+      </div> -->
     </section>
     <!-- end hero -->
 
@@ -103,14 +103,14 @@
     <!-- Wrap every h2 with a class of "section-title" in this div! -->
 
     <!-- "What We Do" section-->
+   
+    <section id="what-we-do" class="intro">
     <div class="flex-row">
       <h2 class="section-title primary-border">
         What We Do
       </h2>
     </div>
-    <section id="what-we-do" class="intro">
-      <h2 class="section-title primary-border">What We Do</h2>
-      <div class="flex-row">
+    <div class="flex-row">
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, aliquam
         voluptas impedit amet dolorem eaque fugit eum dolorum accusantium atque
@@ -121,13 +121,13 @@
     </section>
 
     <!-- "What You Do" section-->
-    <div class="flex-row">
-      <h2 class="section-title primary-border">
+  
+    <section id="what-you-do" class="steps">
+      <div class="flex-row">
+      <h2 class="section-title secondary-border">
         What You Do
       </h2>
-    </div>
-    <section id="what-you-do" class="steps">
-      <h2 class="section-title secondary-border">What You Do</h2>
+      </div>
 
       <div class="step">
         <h3>Step 1.</h3>
@@ -158,6 +158,7 @@
       <div class="step">
         <h3>Step 3.</h3>
         <div class="step-info">
+          <div class="step-img">
         <img src="./assets/images/step-3.svg" alt="" />
         </div>
         <div class="step-text">
@@ -172,7 +173,8 @@
 
       <div class="step">
         <h3>Step 4.</h3>
-        <div class="step-info"
+        <div class="step-info">
+          <div class="step-img">
         <img src="./assets/images/step-4.svg" alt="" />
         </div>
         <div class="step-text">
@@ -184,14 +186,15 @@
     </section>
 
     <!-- "meet the trainers" section-->
-    <div class="flex-row">
-      <h2 class="section-title primary-border">
-        Meet the Trainers
-      </h2>
-    </div>
+    
     <section id="your-trainers">
-      <h2 class="section-title primary-border">Meet The Trainers</h2>
+      <div class="flex-row">
+      <h2 class="section-title primary-border">
+        Meet The Trainers
+      </h2>
+      </div>
 
+      <div class="trainers">
       <article class="trainer">
         <img
           src="./assets/images/trainer-1.jpg"
@@ -234,7 +237,7 @@
         />
         <div class="trainer-bio">
           <h3 class="trainer-name">Harry "the Headband" Smith</h3>
-          <h4 class="trainer-bio">Strength</h4>
+          <h4 class="trainer-role">Strength</h4>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
             neque animi quo cupiditate commodi saepe culpa sed itaque velit
@@ -243,25 +246,37 @@
           </p>
         </div>
       </article>
-      <div class="trainers">
-        <!-- This is for show; keep the article tags you have -->
-        <article>Trainer 1 Info</article>
-        <article>Trainer 2 Info</article>
-        <article>Trainer 3 Info</article>  
       </div>
     </section>
 
     <!-- "reach out" section-->
-    <div class="flex-row">
-      <h2 class="section-title primary-border">
-        Reach Out<div class="flex-row">
-          </h2>
-        </div>
+    
+    <section id="reach-out" class="contact">
+      <div class="flex-row">
+      <h2 class="section-title secondary-border">
+        Reach Out
       </h2>
     </div>
-    <section id="reach-out" class="contact">
-      <h2 class="section-title secondary-border">Reach Out</h2>
-      <div class="contact-info">
+
+        <div class="contact-info">
+          <div>
+          <h3>Run Buddy</h3>
+          <p>
+            Any questions or concerns before signing up?
+            <br />
+            Let us know and we'll be happy to talk to you!
+          </p>
+
+          <address>
+            94 West 32nd Street <br />
+            Hamilton, ON <br />
+            L9C 5G9<br />
+            P: 905.334.4873<br />
+            E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+          </address>
+
+        </div>
+
         <div class="contact-form">
           <h3>Contact Us</h3>
           <form>
@@ -274,6 +289,7 @@
              <button type="submit">Submit</button>
             </form>
         </div>
+
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2906.4533804121543!2d-79.91229788476092!3d43.241918986946125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882c9b305840ef21%3A0xbecfa2cfcdab98d0!2s94%20W%2032nd%20St%2C%20Hamilton%2C%20ON%20L9C%205G9!5e0!3m2!1sen!2sca!4v1651849492960!5m2!1sen!2sca"
           width="600"
@@ -284,21 +300,6 @@
         >
         </iframe>
 
-        <div>
-          <h3>Run Buddy</h3>
-          <p>
-            Any questions or concerns before signing up?
-            <br />
-            Let us know and we'll be happy to talk to you!
-          </p>
-          <address>
-            94 West 32nd Street <br />
-            Hamilton, ON <br />
-            L9C 5G9<br />
-            P: 905.334.4873<br />
-            E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-          </address>
-        </div>
       </div>
     </section>
 
